<resources>
    <string name="app_name">SilentTime</string>
    <!-- Fragments -->
    <string name="settings">Settings</string>
    <string name="rate">Rate</string>
    <string name="details">Details</string>
    <string name="time">Time Schedule</string>
    <string name="silencer">New silencer</string>

    <!-- Days of the week -->
    <string name="day_sunday">SUN</string>
    <string name="day_monday">MON</string>
    <string name="day_tuesday">TUE</string>
    <string name="day_wednesday">WED</string>
    <string name="day_thursday">THU</string>
    <string name="day_friday">FRI</string>
    <string name="day_saturday">SAT</string>

    <!-- Buttons -->
    <string name="btn_set_silencer">Set</string>
    <string name="btn_update_silencer">Update</string>
    <string name="btn_set">Set</string>
    <string name="btn_keep_it_off">Keep it off</string>


    <!-- Labels -->
    <string name="turn_off_ringer">Turn off ringer for:</string>
    <string name="emptylist_welcome">Welcome to Silent Time!</string>
    <string name="emptylist_label">Anything you create or edit will appear here.</string>
    <string name="minutes">minutes</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="close">Close</string>
    <string name="delete">Deleted</string>
    <string name="undo">Undo</string>
    <string name="list_empty">No items in list</string>
    <string name="default_time">00:00</string>
    <string name="default_date">Empty date</string>
    <string name="default_silencer_name">Silencer name</string>
    <string name="add_new_silencer">New</string>
    <string name="add_new_silencer_hint">Enter description</string>
    <string name="label_to">to</string>
    <string name="label_start_end_time">Start Time</string>
    <string name="label_repeat">Repeat</string>
    <string name="label_app_version">Version: 2.1</string>
</resources>
